--- a/templates/index.html
+++ b/templates/index.html
@@ -17,61 +17,48 @@
       <h1>Mission to Mars</h1>
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
-      
+
     <!-- Latest Mars News row-->
     <div class="row">
       <div class="col-md-12"/>
-        <h3>Latest Mars News</h3>
-        <strong><h4>{{ mars.data1 }}</h4></strong>
-        <p>{{ mars.data2 }}</p>
-      </div>
+      <h3>Latest Mars News</h3>
+      <strong><h4>{{ mars['news_title'] }}</h4></strong>
+      <p>{{ mars['news_p'] }}</p>
     </div>
-    <!--Featured image, weather and facts table row-->
-    <div class="row">
-      <div class="col-md-6"/>
-        <h3>Featured Mars Image</h3>
-        <img src= {{ mars.image }} style="width:125%"/>
-      </div>
-      <div class="col-md-2"/>
-      </div>
-      <div class="col-md-4"/>
-        <div class="container-fluid" style="border:2px solid #cecece;"/>  
-          <h4>Current Weather on Mars</h4>
-          <p>{{ mars.weather }}</p>
-        </div>
-        <div class="container"/>
-          <h4>Mars Facts</h4>  
-          {{ mars.table|safe }}
-        </div>  
-      </div>
-    </div>
-    <!--Hemispheres-->
-    <h2 class="text-center">Mars Hemispheres</h2>
-    <!--Add images hemispheres here -->
-    {% for hemisphere in mars.hemispheres %}
-    <div class = "col-md-6">
-    <div class=thumbnail>
+  </div>
+  <!--Featured image, weather and facts table row-->
+  <div class="row">
+    <div class="col-md-6"/>
+    <h3>Featured Mars Image</h3>
+    <img src= {{ mars['featured_image_url'] }} style="width:125%"/>
+  </div>
+  <div class="col-md-2"/>
+</div>
+<div class="col-md-4"/>
+<div class="container-fluid" style="border:2px solid #cecece;"/>  
+<h4>Current Weather on Mars</h4>
+<p>{{ mars['mars_weather'] }}</p>
+</div>
+<div class="container"/>
+<h4>Mars Facts</h4>  
+{{ mars['tables']|safe }}
+</div>  
+</div>
+</div>
+<!--Hemispheres-->
+<h2 class="text-center">Mars Hemispheres</h2>
+<!--Add images hemispheres here -->
+{% for hemisphere in mars['hemispheres'] %}
+<div class = "col-md-6">
+  <div class=thumbnail>
     <img src="{{hemisphere.img_url}}" alt=......>
     <div class = "caption">
-    <h3>{{hemisphere.title}}</h3>
+      <h3>{{hemisphere['title']}}</h3>
+    </div>
   </div>
 </div>
+{% endfor %}
 </div>
-    {% endfor %}
-      </div>
-    </div>
+</div>
 </body>
 </html>
-© 2018 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Press h to open a hovercard with more details.
