--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         <h3>
           Featured Mars Image
         </h3>
-        <img class = "mars-image" src= {{ mars['featured_image_url'] }} style="width:100%; height: 430px;" />
+        <img class = "mars-image" src= {{ mars['featured_image_url'] }} style="width:100%" />
         <!-- <img src = {{ mars['featured_image_url'] }} class="img-fluid" alt="Featured image"> -->
       </div>
       <!-- <div class="col-md-2"/>
